#9: URLs should not contain non-ASCII characters.